# pymdtools

./: .coveragerc  .gitattributes  .gitignore  .readthedocs.yml  LICENSE  LICENSE.md  LICENSES-3rd-party.md  README.md  make.bat  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-docs.txt  requirements.txt  setup.cfg  setup.py
.config/: pep8.conf  pylint.conf
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
.pytest_tmp_mistune_cov/: coverage.json
THIRD_PARTY_LICENSES/: Apache-2.0.txt  BSD-3-Clause.txt  MIT.txt  Unlicense.txt
doc/: config_doc.dox
docs/: common.rst  conf.py  config_doc.dox  filetools.rst  index.rst  instruction.rst  license_link.rst  markdownify_integration.rst  mdcommon.rst  mdfile.rst  mdtopdf.rst  mistune_integration.rst  normalize.rst  package.rst  readme_link.rst  release.rst  translate.rst
pymdtools/: __init__.py  _about.py  common.py  filetools.py  instruction.py  markdownify.py  markdownify_integration.py  mdcommon.py  mdfile.py  mdrender.py  mdtopdf.py  mistune_integration.py  mistunege.py  normalize.py  translate.py  version.bat  version.py
pymdtools/common/: __init__.py  core.py  datetime_utils.py  fs.py  text.py  time_validate.py
pymdtools/referenced_files/: ge.txt  ge_chunky.txt  (+8 more)
scripts/: add_license_headers.py  common.bat  logo.bat  release.py
tests/: test_common.py  test_detect_file_encoding.py  test_general.py  test_init_module.py  test_instruction.py  test_mdcommon.py  test_mdtopdf.py  test_normalize.py  test_translate.py
win-shortcuts/: requirements-dev.bat  tag_version.bat  test.bat
(+286 files in other folders)
