# =============================================================================
#                    Author: Florent TOURNOIS | License: MIT                   
# =============================================================================

[build-system]
requires = [
  "setuptools>=64",
  "wheel"
]
build-backend = "setuptools.build_meta"

[tool.pyright]
include = ["pymdtools"]
ignore = ["**/tests/**", "**/examples/**"]
venvPath = "."
venv = ".venv"

typeCheckingMode = "strict"

