# =============================================================================
#                    Author: Florent TOURNOIS | License: MIT                   
# =============================================================================

[build-system]
requires = [
  "setuptools>=77",
  "wheel>=0.45"
]
build-backend = "setuptools.build_meta"

[tool.pyright]
include = ["pymdtools", "scripts/release.py"]
exclude = ["tests", "examples", "build", "dist", "docs/_build"]

typeCheckingMode = "strict"

